--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@ html,
 body,
 #root {
   min-height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
